import java.text.SimpleDateFormat

plugins {
    id 'application'
}
java {
    version = 'unspecified'
    sourceCompatibility = "8"
    targetCompatibility = "8"
    group = 'com.nixiedroid.rpc'
    toolchain {
        languageVersion = JavaLanguageVersion.of(8)
    }
}
application  {
    mainClass = "com.nixiedroid.rpc.Main"
}

compileJava {
    options.compilerArgs << "-Xlint:deprecation" << "-Xlint:unchecked"
    //   options.compilerArgs << "--add-exports=java.base/jdk.internal.module=nixiedroid.dynamic.core"
}

repositories {
    mavenCentral()
}

dependencies {
    implementation project(":aes")
    implementation project(":util")
    implementation project(':core')
    runtimeOnly project(":real-plugin")
    //   implementation 'com.rapid7.client:dcerpc:0.11.0'
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

jar {
    manifest {
        attributes(
                "Implementation-Title": project.name,
                "Implementation-Version": project.version,
                //'Add-Opens': 'java.prefs/java.util.prefs',
                "Main-Class": application.mainClass,
                "Created-By"            : "Gradle ${gradle.gradleVersion}",
                "Build-Timestamp"       : new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss.SSSZ").format(new Date()),
                "Build-Jdk"             : "${System.properties['java.version']} (${System.properties['java.vendor']} ${System.properties['java.vm.version']})",
                "Build-OS"              : "${System.properties['os.name']} ${System.properties['os.arch']} ${System.properties['os.version']}"
        )
    }
}

test {
    useJUnitPlatform()
}